@@ -27,7 +27,8 @@ package org.topicquests.backside.servlet.apps.usr.persist;
 
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
-import javax.xml.bind.DatatypeConverter;
+
+import java.util.Base64;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
 import java.security.spec.InvalidKeySpecException;
@@ -162,11 +163,11 @@ public class PasswordStorage {
 
 	private static byte[] fromBase64(String hex)
 			throws IllegalArgumentException {
-		return DatatypeConverter.parseBase64Binary(hex);
+		return Base64.getDecoder().decode(hex);
 	}
 
 	private static String toBase64(byte[] array) {
-		return DatatypeConverter.printBase64Binary(array);
+		return Base64.getEncoder().encodeToString(array);
 	}
 
 	@SuppressWarnings("serial")
